added new chapter

--- a/LLMS/Hands-On-Building-LLMS/Semantic-similairty.ipynb
+++ b/LLMS/Hands-On-Building-LLMS/Semantic-similairty.ipynb
@@ -209,6 +209,30 @@
    "source": [
     "keyword_search(query = \"how precise was the science\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### In cases like this, one possible heuristic is to set a threshold level—a maximum distance for relevance, for example. A lot of search systems present the user with the best info they can get and leave it up to the user to decide if it’s relevant or not. Tracking the information of whether the user clicked on a result (and were satisfied by it) can improve future versions of the search system.\n",
+    "\n",
+    "#### Another caveat of dense retrieval is when a user wants to find an exact match for a specific phrase. That’s a case that’s perfect for keyword matching. That’s one reason why hybrid search, which includes both semantic search and keyword search, is advised instead of relying solely on dense retrieval.\n",
+    "\n",
+    "#### Dense retrieval systems also find it challenging to work properly in domains other than the ones that they were trained on. So, for example, if you train a retrieval model on internet and Wikipedia data, and then deploy it on legal texts (without having enough legal data as part of the training set), the model will not work as well in that legal domain.\n",
+    "\n",
+    "## Chunking long texts\n",
+    "\n",
+    "#### One limitation of Transformer language models is that they are limited in context sizes, meaning we cannot feed them very long texts that go above the number of words or tokens that the model supports. So how do we embed long texts?\n",
+    "\n",
+    "#### There are several possible ways, and two possible approaches shown in Figure 8-7 include indexing one vector per document and indexing multiple vectors per document.\n",
+    "\n",
+    "#### One vector per document\n",
+    "#### In this approach, we use a single vector to represent the whole document. The possibilities here include:\n",
+    "\n",
+    "#### Embedding only a representative part of the document and ignoring the rest of the text. This may mean embedding only the title, or only the beginning of the document. This is useful to get quickly started with building a demo but it leaves a lot of information unindexed and therefore unsearchable. As an approach, it may work better for documents where the beginning captures the main points of a document (think: Wikipedia article). But it’s really not the best approach for a real system because a lot of information would be left out of the index and would be unsearchable.\n",
+    "\n",
+    "#### Embedding the document in chunks, embedding those chunks, and then aggregating those chunks into a single vector. The usual method of aggregation here is to average those vectors. A downside of this approach is that it results in a highly compressed vector that loses a lot of the information in the document."
+   ]
   }
  ],
  "metadata": {
