--- a/LLMS/Hands-On-Building-LLMS/Text-Embeddings.ipynb
+++ b/LLMS/Hands-On-Building-LLMS/Text-Embeddings.ipynb
@@ -119,6 +119,84 @@
     "\n",
     "#### We can perform evaluation of the performance of our model using the Semantic Textual Similarity Benchmark (STSB). It is a collection of human-labeled sentence pairs, with similarity scores between 1 and 5."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sentence_transformers.evaluation import EmbeddingSimilarityEvaluator\n",
+    "\n",
+    "# Create an embedding similarity evaluator for STSB\n",
+    "val_sts = load_dataset(\"glue\", \"stsb\", split=\"validation\")\n",
+    "evaluator = EmbeddingSimilarityEvaluator(\n",
+    "    sentences1=val_sts[\"sentence1\"],\n",
+    "    sentences2=val_sts[\"sentence2\"],\n",
+    "    scores=[score/5 for score in val_sts[\"label\"]],\n",
+    "    main_similarity=\"cosine\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sentence_transformers.training_args import SentenceTransformerTrainingArguments\n",
+    "\n",
+    "# Define the training arguments\n",
+    "args = SentenceTransformerTrainingArguments(\n",
+    "    output_dir=\"base_embedding_model\",\n",
+    "    num_train_epochs=1,\n",
+    "    per_device_train_batch_size=32,\n",
+    "    per_device_eval_batch_size=32,\n",
+    "    warmup_steps=100,\n",
+    "    fp16=True,\n",
+    "    eval_steps=100,\n",
+    "    logging_steps=100,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sentence_transformers.trainer import SentenceTransformerTrainer\n",
+    "\n",
+    "# Train embedding model\n",
+    "trainer = SentenceTransformerTrainer(\n",
+    "    model=embedding_model,\n",
+    "    args=args,\n",
+    "    train_dataset=train_dataset,\n",
+    "    loss=train_loss,\n",
+    "    evaluator=evaluator\n",
+    ")\n",
+    "trainer.train()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "evaluator(embedding_model)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Larger batch sizes tend to work better with multiple negative rankings (MNR) loss as a larger batch makes the task more difficult. The reason for this is that the model needs to find the best matching sentence from a larger set of potential pairs of sentences. You can adapt the code to try out different batch sizes and get a feeling of its effects.\n",
+    "\n",
+    "## In-Depth Evaluation\n",
+    "\n",
+    "#### A good embedding model is more than just a good score on the STSB benchmark! As we observed earlier, the GLUE benchmark has a number of tasks for which we can evaluate our embedding model. However, there exist many more benchmarks that allow for the evaluation of embedding models. To unify this evaluation procedure, the Massive Text Embedding Benchmark (MTEB) was developed.5 The MTEB spans 8 embedding tasks that cover 58 datasets and 112 languages."
+   ]
   }
  ],
  "metadata": {
