added new notes

--- a/LLMS/Hands-On-Building-LLMS/Text-Embeddings.ipynb
+++ b/LLMS/Hands-On-Building-LLMS/Text-Embeddings.ipynb
@@ -197,6 +197,124 @@
     "\n",
     "#### A good embedding model is more than just a good score on the STSB benchmark! As we observed earlier, the GLUE benchmark has a number of tasks for which we can evaluate our embedding model. However, there exist many more benchmarks that allow for the evaluation of embedding models. To unify this evaluation procedure, the Massive Text Embedding Benchmark (MTEB) was developed.5 The MTEB spans 8 embedding tasks that cover 58 datasets and 112 languages."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from mteb import MTEB\n",
+    "\n",
+    "# Choose evaluation task\n",
+    "evaluation = MTEB(tasks=[\"Banking77Classification\"])\n",
+    "\n",
+    "# Calculate results\n",
+    "results = evaluation.run(model)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Cosine similarity\n",
+    "#### The cosine similarity loss is an intuitive and easy-to-use loss that works across many different use cases and datasets. It is typically used in semantic textual similarity tasks. In these tasks, a similarity score is assigned to the pairs of texts over which we optimize the model.\n",
+    "\n",
+    "#### Instead of having strictly positive or negative pairs of sentences, we assume pairs of sentences that are similar or dissimilar to a certain degree. Typically, this value lies between 0 and 1 to indicate dissimilarity and similarity, respectively \n",
+    "\n",
+    "#### Cosine similarity loss intuitively works best using data where you have pairs of sentences and labels that indicate their similarity between 0 and 1. To use this loss with our NLI dataset, we need to convert the entailment (0), neutral (1), and contradiction (2) labels to values between 0 and 1. The entailment represents a high similarity between the sentences, so we give it a similarity score of 1. In contrast, since both neutral and contradiction represent dissimilarity, we give these labels a similarity score of 0:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datasets import Dataset, load_dataset\n",
+    "\n",
+    "# Load MNLI dataset from GLUE\n",
+    "# 0 = entailment, 1 = neutral, 2 = contradiction\n",
+    "train_dataset = load_dataset(\n",
+    "    \"glue\", \"mnli\", split=\"train\"\n",
+    ").select(range(50_000))\n",
+    "train_dataset = train_dataset.remove_columns(\"idx\")\n",
+    "\n",
+    "# (neutral/contradiction)=0 and (entailment)=1\n",
+    "mapping = {2: 0, 1: 0, 0:1}\n",
+    "train_dataset = Dataset.from_dict({\n",
+    "    \"sentence1\": train_dataset[\"premise\"],\n",
+    "    \"sentence2\": train_dataset[\"hypothesis\"],\n",
+    "    \"label\": [float(mapping[label]) for label in train_dataset[\"label\"]]\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sentence_transformers.evaluation import EmbeddingSimilarityEvaluator\n",
+    "\n",
+    "# Create an embedding similarity evaluator for stsb\n",
+    "val_sts = load_dataset(\"glue\", \"stsb\", split=\"validation\")\n",
+    "evaluator = EmbeddingSimilarityEvaluator(\n",
+    "    sentences1=val_sts[\"sentence1\"],\n",
+    "    sentences2=val_sts[\"sentence2\"],\n",
+    "    scores=[score/5 for score in val_sts[\"label\"]],\n",
+    "    main_similarity=\"cosine\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "from sentence_transformers import losses, SentenceTransformer\n",
+    "from sentence_transformers.trainer import SentenceTransformerTrainer\n",
+    "from sentence_transformers.training_args import SentenceTransformerTrainingArguments\n",
+    "\n",
+    "# Define model\n",
+    "embedding_model = SentenceTransformer(\"bert-base-uncased\")\n",
+    "\n",
+    "# Loss function\n",
+    "train_loss = losses.CosineSimilarityLoss(model=embedding_model)\n",
+    "\n",
+    "# Define the training arguments\n",
+    "args = SentenceTransformerTrainingArguments(\n",
+    "    output_dir=\"cosineloss_embedding_model\",\n",
+    "    num_train_epochs=1,\n",
+    "    per_device_train_batch_size=32,\n",
+    "    per_device_eval_batch_size=32,\n",
+    "    warmup_steps=100,\n",
+    "    fp16=True,\n",
+    "    eval_steps=100,\n",
+    "    logging_steps=100,\n",
+    ")\n",
+    "\n",
+    "# Train model\n",
+    "trainer = SentenceTransformerTrainer(\n",
+    "    model=embedding_model,\n",
+    "    args=args,\n",
+    "    train_dataset=train_dataset,\n",
+    "    loss=train_loss,\n",
+    "    evaluator=evaluator\n",
+    ")\n",
+    "trainer.train()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "evaluator(embedding_model)"
+   ]
   }
  ],
  "metadata": {
