added new notes

--- a/LLMS/LLM's Engineer Handbook/mvp.ipynb
+++ b/LLMS/LLM's Engineer Handbook/mvp.ipynb
@@ -24,7 +24,29 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Building ML systems with feature/training/inference pipelines\n",
+    "\n",
+    "#### Before diving into the specifics of the LLM Twin architecture, we must understand an ML system pattern at the core of the architecture, known as the feature/training/inference (FTI) architecture. This section will present a general overview of the FTI pipeline design and how it can structure an ML application.\n",
+    "\n",
+    "\n",
+    "## The problem with building ML systems\n",
+    "\n",
+    "#### Building production-ready ML systems is much more than just training a model. From an engineering point of view, training the model is the most straightforward step in most use cases. However, training a model becomes complex when deciding on the correct architecture and hyperparameters. That’s not an engineering problem but a research problem.\n",
+    "\n",
+    "#### At this point, we want to focus on how to design a production-ready architecture. Training a model with high accuracy is extremely valuable, but just by training it on a static dataset, you are far from deploying it robustly. We have to consider how to do the following:\n",
+    "\n",
+    "- Ingest, clean, and validate fresh data\n",
+    "- Training versus inference setups\n",
+    "- Compute and serve features in the right environment\n",
+    "- Serve the model in a cost-effective way\n",
+    "- Version, track, and share the datasets and models\n",
+    "- Monitor your infrastructure and models\n",
+    "- Deploy the model on a scalable infrastructure\n",
+    "- Automate the deployments and training\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
