added new rag chapter

--- a/LLMS/LLM's Engineer Handbook/Tooling-Installation.ipynb
+++ b/LLMS/LLM's Engineer Handbook/Tooling-Installation.ipynb
@@ -4,13 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Tooling and Installation"
+    "# RAG Feature Pipeline"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### Retrieval-augmented generation (RAG) is fundamental in most generative AI applications. RAG’s core responsibility is to inject custom data into the large language model (LLM) to perform a given action (e.g., summarize, reformulate, and extract the injected data). You often want to use the LLM on data it wasn’t trained on (e.g., private or new data). As fine-tuning an LLM is a highly costly operation, RAG is a compelling strategy that bypasses the need for constant fine-tuning to access that new data.\n",
+    "\n",
+    "#### "
+   ]
   }
  ],
  "metadata": {
